[package]
name = "nel"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_float = "0.1"
device_query = "1.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
chrono = "0.4"
